# transcribe-computer-audio-from-mic-website-Sep24

./: .replit  README.md  config.py  database.py  error_log.txt  error_log.txt.1  main.py  pasted_text.txt  pyproject.toml  replit.nix  transcription.py
static/css/: style.css
static/js/: app.js
templates/: index.html
